<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/new_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingTop="40dp"


        />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="Create your account"
        android:textAlignment="center"
        android:textColor="@color/black"

        />



    <TextView
        android:id="@+id/tv_reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/playfair_display"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/et_reg_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="username"
        />

    <TextView
        android:id="@+id/tv_reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/playfair_display"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/et_reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email address"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="email"
        />

    <TextView
        android:id="@+id/tv_reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/playfair_display"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/et_reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="password"
        />

    <TextView
        android:id="@+id/tv_reg_con_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:padding="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/playfair_display"
        android:paddingBottom="10dp"
        />

    <EditText
        android:id="@+id/et_reg_con_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm password"
        android:inputType="text"
        android:padding="10dp"
        android:paddingStart="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_background"
        android:autofillHints="confirm password"
        />

    <Button

        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape2"
        android:padding="10dp"
        android:paddingBottom="10dp"
        android:text="@string/sign_up"
        android:textColor="@color/white" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/playfair_display"
        android:padding="10dp"
        android:paddingBottom="15dp"
        android:text="Already have an account?"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:padding="10dp"
        android:paddingBottom="15dp"
        android:text="Log in"
        android:textColor="@color/white" />



</LinearLayout>